--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "puppeteer": "^15.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
